	dialogs in the 'Edit Affiliate' dialog.
2025-06-26 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'List Affiliates' dialog in davit(1) to set the
	'Show Affiliates Only' checkbox to be ticked by default.
2025-06-26 Fred Gleason <fredg@paravelsystems.com>
	* Adjusted the column width for the days of the week indicators
	in davit(1)'s 'Edit Show Time' dialog.
2025-06-26 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a regression in davit(1) where the incorrect time format
	was displayed for the start end times in 'Program List' dialog.
2025-06-26 Fred Gleason <fredg@paravelsystems.com>
	* Restored addition of a remark when adding a program airing in
	davit(1).
	* Added 'RemarkProgramEdit' to the 'Dvt::RemarkType' enumeration.
	* Added addition of a remark when editing a program airing in
	davit(1).
2025-06-26 Fred Gleason <fredg@paravelsystems.com>
	* Refactored the 'Networks' dialog in davit(1).
2025-06-29 Fred Gleason <fredg@paravelsystems.com>
	* Refactored the 'List Programs', 'Edit Program' and 'Edit Feed Slot'
	dialogs in davit(1).
2025-06-29 Fred Gleason <fredg@paravelsystems.com>
	* Removed the 'DvtFeed' class.
2025-06-30 Fred Gleason <fredg@paravelsystems.com>
	* Refactored the 'List Providers' dialog in davit(1).
2025-07-01 Fred Gleason <fredg@paravelsystems.com>
	* Removed the 'Manage Programs' button from the main menu screen of
	davit(1).
	* Removed the 'Import External Data' button from the main menu screen
	of davit(1).
2025-07-08 Fred Gleason <fredg@paravelsystems.com>
	* Refactored the 'Generate Affidavit' dialog in davit(1).
2025-07-08 Fred Gleason <fredg@paravelsystems.com>
	* Tweaked font layouts for affidavit print outs in davit(1).
2025-07-08 Fred Gleason <fredg@paravelsystems.com>
	* Removed dead code in 'davit/list_affiliates.cpp'.
2025-07-08 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a fence post error in davit(1) that cause the affidavit text
	to be incorrect when generated for multiple programs.